# airfoil-cfd-ml

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: smoke_edge_earlystop.yaml  v2_14_twostage_from_v21_div0012.yaml  v2_gradloss.yaml  (+18 more)
supplement/airfoil-cfd-ml/: .gitignore  README.md  pyproject.toml  requirements.txt
supplement/airfoil-cfd-ml/configs/: default.yaml  v2_10_residual_physspace_div_w0019.yaml  v2_11_residual_physspace_div_w0021.yaml  v2_12_residual_physspace_div_w0022.yaml  v2_13_twostage_from_v21_div0018.yaml  v2_17_twostage_from_v21_div0010.yaml  v2_18_twostage_from_v21_div0012_margin4.yaml  v2_1_residual_from_w01_seed43.yaml  v2_21_twostage_from_v21_adaptive_div_tight.yaml  v2_23_twostage_from_v214_lr3e5_e6_seed43.yaml  v2_25_twostage_from_v214_lr3e5_e6_seed45.yaml  v2_2_residual_light_phys_w002.yaml  v2_5_residual_physspace_div.yaml  v2_5_residual_physspace_div_seed44.yaml  v2_7_residual_physspace_div_w0025.yaml  v2_gradloss_velonly.yaml  v2_gradloss_w01.yaml
supplement/airfoil-cfd-ml/docs/: CHANGELOG.md  CONTRIBUTING.md  DATA.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md
supplement/airfoil-cfd-ml/scan_logs/: README.md  multiseed_eval_latest.csv  multiseed_eval_raw.txt
supplement/airfoil-cfd-ml/scripts/: evaluate.py  train.py
supplement/airfoil-cfd-ml/src/airfoil_cfd_ml/: __init__.py  evaluate.py  losses.py  metrics.py
supplement/airfoil-cfd-ml/src/airfoil_cfd_ml_v2/: __init__.py  evaluate.py  normalization.py  train.py
supplement/airfoil-cfd-ml/tests/: test_smoke.py
(+85 files in other folders)
