[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airfoil-cfd-ml"
version = "0.1.0"
description = "Neural surrogate model for 2D airfoil CFD fields"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Qi Yutian"},
]
dependencies = [
    "numpy>=1.26,<2",
    "matplotlib>=3.7",
    "torch>=2.0",
    "tqdm>=4.64",
    "pyyaml>=6.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
