[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airfoil-cfd-ml"
version = "0.1.0"
description = "Neural surrogate model for 2D airfoil CFD fields"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy",
  "matplotlib",
  "torch",
  "tqdm",
  "pyyaml",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
